--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -83833,6 +83833,9 @@
         }
       }
     },
+    "Pretty snapshot" : {
+
+    },
     "Preview" : {
       "localizations" : {
         "de" : {
