Remove map pitch setting.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -67588,6 +67588,7 @@
       }
     },
     "Max map pitch" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
