Fix speech to text alert.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -117042,7 +117042,7 @@
         }
       }
     },
-    "Trigger by saying '%@'" : {
+    "Trigger by saying '%@'." : {
 
     },
     "Trigger with chat message '!moblin alert %@'" : {
